--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    gap: 1px;
     width: 512px;
     height: 512px;
     border-style: double;
