--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: Impact, 'Arial Narrow Bold', sans-serif;
     background-color: gainsboro;
     display: flex;
     flex-direction: column;
@@ -7,8 +8,7 @@ body {
 }
 
 #title-container {
-    font-family: Impact, 'Arial Narrow Bold', sans-serif;
-    margin: 16px;
+    margin-bottom: 8px;
 }
 
 #grid-container {
@@ -29,4 +29,75 @@ body {
 .square-div {
     background-color: white;
     user-select: none;
+}
+
+#app-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    width: 1200px;
+    gap: 60px;
+}
+
+#grid-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 400px;
+}
+
+#grid-buttons button {
+    border-radius: 24px;
+    padding: 16px 8px;
+    font-size: 16px;
+}
+
+#grid-size-slider {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    width: 400px;
+}
+
+#size-change-warning {
+    text-align: center;
+    color: red;
+}
+
+.slider {
+    /* Override default CSS styles */
+    -webkit-appearance: none;
+    appearance: none;
+
+    width: 100%;
+    height: 16px;
+    outline: none;
+
+    /* Set transparency (for mouse-over effects on hover) */
+    opacity: 0.8;
+
+    /* 0.2 seconds transition on hover */
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+
+    border-radius: 24px;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    /* Override default look */
+    -webkit-appearance: none;
+    appearance: none;
+
+    width: 22px;
+    height: 22px;
+    background: black;
+    cursor: pointer;
+    border-radius: 24px;
 }
