--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
     margin-bottom: 8px;
 }
 
+#title:hover {
+    transition: all 0.1s ease-in-out;
+    transform: scale(1.15);
+    cursor: pointer;
+}
+
 #grid-container {
     background-color: whitesmoke;
     display: flex;
@@ -48,10 +54,37 @@ body {
 }
 
 #grid-buttons button {
-    border-radius: 24px;
-    padding: 16px 8px;
-    font-size: 16px;
+    border: .2rem solid black;
+    border-radius: .2rem;
+    margin: .5rem;
+    font-size: 1.25rem;
+    padding: 1rem .5rem;
+    transition: all 0.05s ease-out;
+    width: 10rem;
+    text-align: center;
+    color: black;
+    background: whitesmoke(0, 0, 0, 0.4);
+    text-shadow: 0 0 .5rem gray;
 }
+
+#grid-buttons button:hover {
+    border-color: goldenrod;
+    box-shadow: 0 0 .5rem goldenrod;
+    cursor: pointer;
+}
+
+#grid-buttons button:active {
+    border-color: goldenrod;
+    box-shadow: 0 0 .5rem goldenrod;
+    transform: scale(0.95);
+    cursor: pointer;
+}
+
+
+
+
+
+
 
 #grid-size-slider {
     display: flex;
@@ -68,6 +101,9 @@ body {
 }
 
 .slider {
+    transition: all 0.05s ease-out;
+    box-shadow: 0 0 .5rem gray;
+
     /* Override default CSS styles */
     -webkit-appearance: none;
     appearance: none;
@@ -77,7 +113,7 @@ body {
     outline: none;
 
     /* Set transparency (for mouse-over effects on hover) */
-    opacity: 0.8;
+    opacity: 0.6;
 
     /* 0.2 seconds transition on hover */
     -webkit-transition: .2s;
@@ -91,6 +127,8 @@ body {
 }
 
 .slider::-webkit-slider-thumb {
+    box-shadow: 0 0 .5rem lightgray;
+
     /* Override default look */
     -webkit-appearance: none;
     appearance: none;
@@ -100,4 +138,12 @@ body {
     background: black;
     cursor: pointer;
     border-radius: 24px;
+}
+
+.slider::-webkit-slider-thumb:hover {
+    background: rgb(225, 0, 0);
+}
+
+.slider::-webkit-slider-thumb:active {
+    transform: scale(0.8);
 }
