--- a/style.css
+++ b/style.css
@@ -63,12 +63,12 @@ body {
     border-radius: 8px;
     margin: 2px;
     font-size: 16px;
+    font-weight: bold;
     padding: 16px 8px;
     transition: all 0.05s ease-out;
     text-align: center;
     color: black;
     background: whitesmoke(0, 0, 0, 0.4);
-    text-shadow: 0 0 4px gray;
 }
 
 #grid-buttons button:hover {
