--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
     transition: all 0.05s ease-out;
     text-align: center;
     color: black;
-    background: whitesmoke(0, 0, 0, 0.4);
+    background-color: whitesmoke;
 }
 
 #grid-buttons button:hover {
@@ -93,7 +93,7 @@ body {
     transition: all 0.05s ease-out;
     text-align: center;
     color: black;
-    background: whitesmoke(0, 0, 0, 0.4);
+    background-color: whitesmoke;
 }
 
 .btn#reset:hover {
